[workspace]
members = ["icons"]

[package]
name = "hitide"
version = "0.5.0"
authors = ["Colin Reeder <colin@vpzom.click>"]
edition = "2018"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
render = { git = "https://github.com/vpzomtrrfrt/render.rs", rev = "d996c5d" }
trout = "0.2.0"
hyper = "0.13.6"
hyper-tls = "0.4.1"
tokio = { version = "0.2.21", features = ["macros"] }
serde_urlencoded = "0.6.1"
serde_json = "1.0.53"
serde_derive = "1.0.111"
serde = "1.0.111"
fallible-iterator = "0.2.0"
ginger = "0.1.0"
ammonia = "3.1.0"
urlencoding = "1.1.1"
http = "0.2.1"
chrono = "0.4.13"
fluent-langneg = "0.13.0"
fluent = "0.12.0"
lazy_static = "1.4.0"
unic-langid = { version = "0.9.0", features = ["macros"] }
futures-util = "0.3.5"
hitide_icons = { path = "./icons" }
